--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,27 +61,27 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
-      - name: Run helm-kubeval
-        uses: desaintmartin/helm-kubeval-action@master
+      - name: Run kubeconform
+        uses: nlamirault/helm-kubeconform-action@v0.2.0
         with:
-          path: charts/v1/.
+          charts: charts/v1/
 
   helm-kubeval-v1alpha1:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@master
-      - name: Run helm-kubeval
-        uses: desaintmartin/helm-kubeval-action@master
+      - name: Run kubeconform
+        uses: nlamirault/helm-kubeconform-action@v0.2.0
         with:
-          path: charts/v1alpha1/.
+          charts: charts/v1alpha1/
 
   helm-kubeval-v1beta1:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@master
-      - name: Run helm-kubeval
-        uses: desaintmartin/helm-kubeval-action@master
+      - name: Run kubeconform
+        uses: nlamirault/helm-kubeconform-action@v0.2.0
         with:
-          path: charts/v1beta1/.
+          charts: charts/v1beta1/
