--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,7 @@ jobs:
       - name: Run helm-docs
         run: .github/helm-docs.sh
 
-  helm-kubeval-v1:
+  helm-kubeconform-v1:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -64,9 +64,9 @@ jobs:
       - name: Run kubeconform
         uses: nlamirault/helm-kubeconform-action@v0.2.0
         with:
-          charts: charts/v1/
+          charts: charts/v1
 
-  helm-kubeval-v1alpha1:
+  helm-kubeconform-v1alpha1:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -74,9 +74,9 @@ jobs:
       - name: Run kubeconform
         uses: nlamirault/helm-kubeconform-action@v0.2.0
         with:
-          charts: charts/v1alpha1/
+          charts: charts/v1alpha1
 
-  helm-kubeval-v1beta1:
+  helm-kubeconform-v1beta1:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -84,4 +84,4 @@ jobs:
       - name: Run kubeconform
         uses: nlamirault/helm-kubeconform-action@v0.2.0
         with:
-          charts: charts/v1beta1/
+          charts: charts/v1beta1
