--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,9 +62,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
       - name: Run kubeconform
-        uses: nlamirault/helm-kubeconform-action@v0.2.0
+        uses: shivjm/helm-kubeconform-action@@v0.2.0
         with:
-          charts: charts/v1
+          chartsDirectory: charts/v1
 
   helm-kubeconform-v1alpha1:
     runs-on: ubuntu-latest
@@ -72,9 +72,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
       - name: Run kubeconform
-        uses: nlamirault/helm-kubeconform-action@v0.2.0
+        uses: shivjm/helm-kubeconform-action@@v0.2.0
         with:
-          charts: charts/v1alpha1
+          chartsDirectory: charts/v1alpha1
 
   helm-kubeconform-v1beta1:
     runs-on: ubuntu-latest
@@ -82,6 +82,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
       - name: Run kubeconform
-        uses: nlamirault/helm-kubeconform-action@v0.2.0
+        uses: shivjm/helm-kubeconform-action@@v0.2.0
         with:
-          charts: charts/v1beta1
+          chartsDirectory: charts/v1beta1
