--- a/charts/v1beta1/irsa/templates/irsa-system-composition.yaml
+++ b/charts/v1beta1/irsa/templates/irsa-system-composition.yaml
@@ -49,3 +49,6 @@ spec:
         - type: FromEnvironmentFieldPath
           fromFieldPath: "providerConfig"
           toFieldPath: "spec.providerConfig"
+        - type: FromEnvironmentFieldPath
+          fromFieldPath: "providerConfigKubernetes"
+          toFieldPath: "spec.providerConfigKubernetes"
