--- a/charts/v1beta1/tenant/templates/secret-store/secretstore-composition.yaml
+++ b/charts/v1beta1/tenant/templates/secret-store/secretstore-composition.yaml
@@ -43,7 +43,7 @@ spec:
                   name:
                 policyDocument:
           providerConfigRef:
-            name: {{ $.Values.provider.kubernetes }}
+            name:
       patches:
         - type: PatchSet
           patchSetName: "k8s-tags"
@@ -78,6 +78,8 @@ spec:
                       }
                     ]
                   }
+        - fromFieldPath: "spec.providerConfigKubernetes"
+          toFieldPath: "spec.providerConfigRef.name"
     - name: SecretStore
       base:
         apiVersion: kubernetes.crossplane.io/v1alpha1
@@ -107,7 +109,7 @@ spec:
                         serviceAccountRef:
                           name:
           providerConfigRef:
-            name: {{ .Values.provider.kubernetes }}
+            name:
       patches:
         - type: PatchSet
           patchSetName: "k8s-tags"
@@ -138,3 +140,5 @@ spec:
           toFieldPath: "spec.forProvider.manifest.spec.provider.aws.auth.jwt.serviceAccountRef.name"
         - fromFieldPath: "spec.region"
           toFieldPath: "spec.forProvider.manifest.spec.provider.aws.region"
+        - fromFieldPath: "spec.providerConfigKubernetes"
+          toFieldPath: "spec.providerConfigRef.name"
