--- a/charts/v1beta1/tenant/templates/secret-store/secretstore-xrd.yaml
+++ b/charts/v1beta1/tenant/templates/secret-store/secretstore-xrd.yaml
@@ -20,7 +20,10 @@ spec:
               properties:
                 irsaCompositionRef:
                   type: string
-                  description: "The name of the IRSA Composition Ref that should be used IRSA creation. This value is store in the global wadtfy-env Environment Config."
+                  description: "The name of the IRSA Composition Ref that should be used for IRSA creation. This value is stored in the global wadtfy-env EnvironmentConfig."
+                providerConfigKubernetes:
+                  type: string
+                  description: "The name of the K8S ProviderConfig. This value is stored in the global wadtfy-env EnvironmentConfig."
                 product:
                   type: string
                   description: "Tenant's product name."
@@ -35,6 +38,7 @@ spec:
                   description: "Tenant's specific namespace where to create dependent resources for external secrets."
               required:
                 - irsaCompositionRef
+                - providerConfigKubernetes
                 - product
                 - region
                 - awsAccountId
