--- a/charts/v1beta1/tenant/templates/tenant-default-composition.yaml
+++ b/charts/v1beta1/tenant/templates/tenant-default-composition.yaml
@@ -61,7 +61,7 @@ spec:
                 credentials:
                   source: InjectedIdentity
           providerConfigRef:
-            name: {{ $.Values.provider.kubernetes }}
+            name:
       patches:
         - type: PatchSet
           patchSetName: "k8s-tags"
@@ -98,6 +98,9 @@ spec:
             string:
               fmt: "provider-config-%s-%s-%s-session"
           toFieldPath: "spec.forProvider.manifest.spec.assumeRoleWithWebIdentity.roleSessionName"
+        - type: FromEnvironmentFieldPath
+          fromFieldPath: "providerConfigKubernetes"
+          toFieldPath: "spec.providerConfigRef.name"
     - name: TenantEnvironmentConfig
       base:
         apiVersion: kubernetes.crossplane.io/v1alpha1
@@ -125,7 +128,7 @@ spec:
                 region:
                 providerConfig:
           providerConfigRef:
-            name: {{ $.Values.provider.kubernetes }}
+            name:
       patches:
         - type: PatchSet
           patchSetName: "k8s-tags"
@@ -149,6 +152,9 @@ spec:
           toFieldPath: "spec.forProvider.manifest.data.region"
         - fromFieldPath: "status.providerConfig"
           toFieldPath: "spec.forProvider.manifest.data.providerConfig"
+        - type: FromEnvironmentFieldPath
+          fromFieldPath: "providerConfigKubernetes"
+          toFieldPath: "spec.providerConfigRef.name"
     - name: SecretStore
       base:
         apiVersion: wadtfy.bmwgroup.net/v1beta1
@@ -157,6 +163,9 @@ spec:
         - type: FromEnvironmentFieldPath
           fromFieldPath: "irsaTenantCompositionRef"
           toFieldPath: "spec.irsaCompositionRef"
+        - type: FromEnvironmentFieldPath
+          fromFieldPath: "providerConfigKubernetes"
+          toFieldPath: "spec.providerConfigKubernetes"
         - fromFieldPath: "spec.product"
           toFieldPath: "spec.product"
         - fromFieldPath: "spec.region"
