--- a/charts/v1beta1/tenant/templates/tenant-system-composition.yaml
+++ b/charts/v1beta1/tenant/templates/tenant-system-composition.yaml
@@ -59,7 +59,7 @@ spec:
                 credentials:
                   source: InjectedIdentity
           providerConfigRef:
-            name: {{ $.Values.provider.kubernetes }}
+            name:
       patches:
         - type: PatchSet
           patchSetName: "k8s-tags"
@@ -95,6 +95,9 @@ spec:
             string:
               fmt: "provider-config-%s-%s-wadtfy-session"
           toFieldPath: "spec.forProvider.manifest.spec.assumeRoleWithWebIdentity.roleSessionName"
+        - type: FromEnvironmentFieldPath
+          fromFieldPath: "providerConfigKubernetes"
+          toFieldPath: "spec.providerConfigRef.name"
     - name: TenantEnvironmentConfig
       base:
         apiVersion: kubernetes.crossplane.io/v1alpha1
@@ -122,7 +125,7 @@ spec:
                 region:
                 providerConfig:
           providerConfigRef:
-            name: {{ $.Values.provider.kubernetes }}
+            name:
       patches:
         - type: PatchSet
           patchSetName: "k8s-tags"
@@ -147,6 +150,9 @@ spec:
           toFieldPath: "spec.forProvider.manifest.data.region"
         - fromFieldPath: "status.providerConfig"
           toFieldPath: "spec.forProvider.manifest.data.providerConfig"
+        - type: FromEnvironmentFieldPath
+          fromFieldPath: "providerConfigKubernetes"
+          toFieldPath: "spec.providerConfigRef.name"
     - name: SecretStore
       base:
         apiVersion: wadtfy.bmwgroup.net/v1beta1
@@ -164,5 +170,8 @@ spec:
         - type: FromEnvironmentFieldPath
           fromFieldPath: "eksAccountID"
           toFieldPath: "spec.awsAccountId"
+        - type: FromEnvironmentFieldPath
+          fromFieldPath: "providerConfigKubernetes"
+          toFieldPath: "spec.providerConfigKubernetes"
         - fromFieldPath: "spec.namespace"
           toFieldPath: "spec.namespace"
