added empty string to default values file

--- a/charts/v1beta1/tenantfilesystem-abstraction/values.yaml
+++ b/charts/v1beta1/tenantfilesystem-abstraction/values.yaml
@@ -1,18 +1,18 @@
 config:
   tenant:
-    awsAccountId:
+    awsAccountId: ""
 
 components:
   global:
-    name:
-    region:
-    deletionPolicy:
+    name: ""
+    region: ""
+    deletionPolicy: ""
 
 providerConfig:
-  aws:
-  k8s:
+  aws: ""
+  k8s: ""
 
 tags:
-  "wadtfy.bmwgroup.net/component-name":
-  "wadtfy.bmwgroup.net/cluster-account-id":
-  "wadtfy.bmwgroup.net/product-name":
+  "wadtfy.bmwgroup.net/component-name": ""
+  "wadtfy.bmwgroup.net/cluster-account-id": ""
+  "wadtfy.bmwgroup.net/product-name": ""
