--- a/charts/v1beta1/tenantfilesystem-abstraction/templates/kms.yaml
+++ b/charts/v1beta1/tenantfilesystem-abstraction/templates/kms.yaml
@@ -10,9 +10,9 @@ spec:
         tagValue: "XTenantFilesystemAbstraction"
       - tagKey: "wadtfy.bmwgroup.net/xrd-version"
         tagValue: "v1beta1"
-      {{- range $tagKey, $tagValue := .Values.tags }}
-      - tagKey: {{ $tagKey }}
-        tagValue: {{ $tagValue | quote }}
+      {{- range .Values.tags }}
+      - tagKey: {{ .tagKey | quote }}
+        tagValue: {{ .tagValue | quote }}
       {{- end }}
     enableKeyRotation: true
     enabled: true
