changed tag iteration

--- a/charts/v1beta1/tenantfilesystem-abstraction/values.yaml
+++ b/charts/v1beta1/tenantfilesystem-abstraction/values.yaml
@@ -13,3 +13,9 @@ providerConfig:
   k8s: ""
 
 tags:
+  - tagKey: "wadtfy.bmwgroup.net/component-name"
+    tagValue: ""
+  - tagKey: "wadtfy.bmwgroup.net/cluster-account-id"
+    tagValue: ""
+  - tagKey: "wadtfy.bmwgroup.net/product-name"
+    tagValue: ""
