--- a/charts/v1beta1/tenantfilesystem-abstraction/values.yaml
+++ b/charts/v1beta1/tenantfilesystem-abstraction/values.yaml
@@ -1,18 +1,15 @@
-config:
-  tenant:
-    awsAccountId: ""
-
 components:
   global:
     name: ""
     region: ""
     deletionPolicy: ""
+  mounttarget:
+    subnetIds:
 
 providerConfig:
   aws: ""
-  k8s: ""
 
-tags:
-  "wadtfy.bmwgroup.net/component-name": ""
-  "wadtfy.bmwgroup.net/cluster-account-id": ""
-  "wadtfy.bmwgroup.net/product-name": ""
+#tags:
+#  "wadtfy.bmwgroup.net/component-name": ""
+#  "wadtfy.bmwgroup.net/cluster-account-id": ""
+#  "wadtfy.bmwgroup.net/product-name": ""
