add metadata.name property

--- a/charts/v1beta1/tenantfilesystem-abstraction/templates/resources.yaml
+++ b/charts/v1beta1/tenantfilesystem-abstraction/templates/resources.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     crossplane/xrd-kind: xtenantfilesystem.wadtfy.bmwgroup.net
     crossplane/xrd-helm_chart_version: {{ $.Chart.Version }}
+  name: {{ $.Values.components.global.name }}-mt-{{ $index }}
 spec:
   forProvider:
     fileSystemIDRef:
