--- a/charts/v1beta1/tenantfilesystem-abstraction/values.yaml
+++ b/charts/v1beta1/tenantfilesystem-abstraction/values.yaml
@@ -4,6 +4,10 @@ components:
     region: ""
     deletionPolicy: ""
   mounttarget:
+    fileSystemIDRef:
+      name:
+    securityGroupRef:
+      name:
     subnetIds:
 
 providerConfig:
