--- a/charts/v1beta1/tenant/templates/secret-store/secretstore-composition.yaml
+++ b/charts/v1beta1/tenant/templates/secret-store/secretstore-composition.yaml
@@ -6,6 +6,11 @@ metadata:
     crossplane.io/xrd: xsecretstores.wadtfy.bmwgroup.net
 spec:
   writeConnectionSecretsToNamespace: crossplane-system
+  environment:
+    environmentConfigs:
+      - type: Reference
+        ref:
+          name: wadtfy-env
   compositeTypeRef:
     apiVersion: wadtfy.bmwgroup.net/v1beta1
     kind: XSecretStore
@@ -55,7 +60,8 @@ spec:
             - type: string
               string:
                 fmt: "secret-store-%s"
-        - fromFieldPath: "spec.irsaCompositionRef"
+        - type: FromEnvironmentFieldPath
+          fromFieldPath: "irsaTenantCompositionRef"
           toFieldPath: "spec.forProvider.manifest.spec.compositionRef.name"
         - fromFieldPath: "spec.awsAccountId"
           toFieldPath: "spec.forProvider.manifest.spec.policyDocument"
@@ -78,7 +84,8 @@ spec:
                       }
                     ]
                   }
-        - fromFieldPath: "spec.providerConfigKubernetes"
+        - type: FromEnvironmentFieldPath
+          fromFieldPath: "providerConfigKubernetes"
           toFieldPath: "spec.providerConfigRef.name"
     - name: SecretStore
       base:
@@ -138,7 +145,9 @@ spec:
               # resource.
               fmt: "%s-secret-store-%s"
           toFieldPath: "spec.forProvider.manifest.spec.provider.aws.auth.jwt.serviceAccountRef.name"
-        - fromFieldPath: "spec.region"
+        - type: FromEnvironmentFieldPath
+          fromFieldPath: "awsRegion"
           toFieldPath: "spec.forProvider.manifest.spec.provider.aws.region"
-        - fromFieldPath: "spec.providerConfigKubernetes"
+        - type: FromEnvironmentFieldPath
+          fromFieldPath: "providerConfigKubernetes"
           toFieldPath: "spec.providerConfigRef.name"
