--- a/charts/v1beta1/irsa/templates/irsa-tenant-composition.yaml
+++ b/charts/v1beta1/irsa/templates/irsa-tenant-composition.yaml
@@ -44,7 +44,7 @@ spec:
           fromFieldPath: "iamOidcProviderId"
           toFieldPath: "spec.iamOidcProviderId"
         - type: FromEnvironmentFieldPath
-          fromFieldPath: "region"
+          fromFieldPath: "awsRegion"
           toFieldPath: "spec.region"
         - type: FromEnvironmentFieldPath
           fromFieldPath: "providerConfig"
