chore: added missing policy permissions for xtenantfilesystem
Signed-off-by: Cliff Dornig <cliff.dornig@iteratec.com>

--- a/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-composition.yaml
+++ b/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-composition.yaml
@@ -470,7 +470,8 @@ spec:
                       "Action": [
                         "elasticfilesystem:DescribeFileSystems",
                         "elasticfilesystem:DescribeMountTargets",
-                        "elasticfilesystem:CreateAccessPoint"
+                        "elasticfilesystem:CreateAccessPoint",
+                        "elasticfilesystem:TagResource"
                       ],
                       "Resource": "arn:aws:elasticfilesystem:%s:%s:file-system/%s"
                     },
