--- a/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-xrd.yaml
+++ b/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-xrd.yaml
@@ -101,6 +101,7 @@ spec:
                 - efsPerformanceMode
                 - efsThroughputMode
                 - storageClass
+                - region
             status:
               type: object
               properties:
