--- a/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-composition.yaml
+++ b/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-composition.yaml
@@ -115,9 +115,6 @@ spec:
           fromFieldPath: "awsAccountId"
           toFieldPath: "spec.env.awsAccountId"
         - type: FromEnvironmentFieldPath
-          fromFieldPath: "region"
-          toFieldPath: "spec.env.region"
-        - type: FromEnvironmentFieldPath
           fromFieldPath: "providerConfig"
           toFieldPath: "spec.env.providerConfig"
         - type: FromEnvironmentFieldPath
@@ -137,11 +134,6 @@ spec:
         - type: ToCompositeFieldPath
           fromFieldPath: "spec.env.awsAccountId"
           toFieldPath: "spec.awsAccountId"
-          policy:
-            fromFieldPath: Required
-        - type: ToCompositeFieldPath
-          fromFieldPath: "spec.env.region"
-          toFieldPath: "spec.region"
           policy:
             fromFieldPath: Required
         - type: ToCompositeFieldPath
@@ -192,8 +184,7 @@ spec:
           toFieldPath: spec.providerConfigRef.name
         - type: PatchSet
           patchSetName: component-name
-        - type: FromEnvironmentFieldPath
-          fromFieldPath: region
+        - fromFieldPath: spec.region
           toFieldPath: spec.forProvider.values.components.global.region
         - fromFieldPath: spec.deletionPolicy
           toFieldPath: spec.forProvider.values.components.global.deletionPolicy
