reference irsaComposition via parameter again in secretstore

--- a/charts/v1beta1/tenant/templates/secret-store/secretstore-composition.yaml
+++ b/charts/v1beta1/tenant/templates/secret-store/secretstore-composition.yaml
@@ -60,8 +60,7 @@ spec:
             - type: string
               string:
                 fmt: "secret-store-%s"
-        - type: FromEnvironmentFieldPath
-          fromFieldPath: "irsaTenantCompositionRef"
+        - fromFieldPath: "spec.irsaCompositionRef"
           toFieldPath: "spec.forProvider.manifest.spec.compositionRef.name"
         - fromFieldPath: "spec.awsAccountId"
           toFieldPath: "spec.forProvider.manifest.spec.policyDocument"
