--- a/charts/v1beta1/tenant/templates/secret-store/secretstore-xrd.yaml
+++ b/charts/v1beta1/tenant/templates/secret-store/secretstore-xrd.yaml
@@ -18,6 +18,9 @@ spec:
             spec:
               type: object
               properties:
+                irsaCompositionRef:
+                  type: string
+                  description: "The name of the IRSA Composition Ref that should be used for IRSA creation. This value is stored in the global wadtfy-env EnvironmentConfig."
                 product:
                   type: string
                   description: "Tenant's product name."
@@ -28,6 +31,7 @@ spec:
                   type: string
                   description: "Tenant's specific namespace where to create dependent resources for external secrets."
               required:
+                - irsaCompositionRef
                 - product
                 - awsAccountId
                 - namespace
